ADD swagger to every controller
