# controllers/getTodo.go
@@ -10,8 +10,8 @@ import (
 // @Tags todo
 // @Produce  json
 // @Security JwtAuth
-// @Success 200 {object} models.Todo "the list todo that user have"
-// @Failure 401 {object} controllers.ErrorMessage "Unauthorized"
+// @Success 200 {array} models.Todo "the list of todos that user have"
+// @Failure 401
 // @Failure 500 {object} controllers.ErrorMessage "Internal Server Error"
 // @Router /api/todo [get]
 func (c *Controller) GetTodoController(ctx *gin.Context) {
@@ -20,9 +20,7 @@ func (c *Controller) GetTodoController(ctx *gin.Context) {
 
 	var todos []models.Todo
 	if tx := c.db.Where(&models.Todo{UserId: userId}).Find(&todos); tx.Error != nil {
-		ctx.JSON(500, gin.H{
-			"message": tx.Error.Error(),
-		})
+		ctx.JSON(500, ErrorMessage{tx.Error.Error()})
 	}
 
 	ctx.JSON(200, todos)
