# controllers/newTodo.go
@@ -9,6 +9,17 @@ type NewTodoDto struct {
 	Title string `json:"title" binding:"required,min=1,max=255"`
 }
 
+// CreateTodoController createTodo
+// @Summary Create todo
+// @Tags todo
+// @Accept json
+// @Produce  json
+// @Security JwtAuth
+// @Param body body controllers.NewTodoDto true "title of todo to create"
+// @Success 201 {array} models.Todo "the list of todos that user have"
+// @Failure 401
+// @Failure 500 {object} controllers.ErrorMessage "Internal Server Error"
+// @Router /api/todo [post]
 func (c *Controller) CreateTodoController(ctx *gin.Context) {
 	v, _ := ctx.Get("userId")
 	var userId = uint(v.(float64))
@@ -16,9 +27,7 @@ func (c *Controller) CreateTodoController(ctx *gin.Context) {
 	var body NewTodoDto
 	err := ctx.ShouldBindJSON(&body)
 	if err != nil {
-		ctx.JSON(400, gin.H{
-			"message": err.Error(),
-		})
+		ctx.JSON(400, ErrorMessage{err.Error()})
 		return
 	}
 
@@ -29,16 +38,12 @@ func (c *Controller) CreateTodoController(ctx *gin.Context) {
 	}
 
 	if tx := c.db.Create(&todo); tx.Error != nil {
-		ctx.JSON(500, gin.H{
-			"message": tx.Error.Error(),
-		})
+		ctx.JSON(500, ErrorMessage{tx.Error.Error()})
 	}
 
 	var todos []models.Todo
 	if tx := c.db.Where(&models.Todo{UserId: userId}).Find(&todos); tx.Error != nil {
-		ctx.JSON(500, gin.H{
-			"message": tx.Error.Error(),
-		})
+		ctx.JSON(500, ErrorMessage{tx.Error.Error()})
 	}
 
 	ctx.JSON(201, todos)
