# docs/swagger.json
@@ -109,52 +109,217 @@
                         "JwtAuth": []
                     }
                 ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "todo"
-                ],
-                "summary": "Get all todos",
-                "responses": {
-                    "200": {
-                        "description": "the list todo that user have",
-                        "schema": {
-                            "$ref": "#/definitions/models.Todo"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ErrorMessage"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ErrorMessage"
-                        }
+              "produces": [
+                "application/json"
+              ],
+              "tags": [
+                "todo"
+              ],
+              "summary": "Get all todos",
+              "responses": {
+                "200": {
+                  "description": "the list of todos that user have",
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "$ref": "#/definitions/models.Todo"
                     }
+                  }
+                },
+                "401": {
+                  "description": ""
+                },
+                "500": {
+                  "description": "Internal Server Error",
+                  "schema": {
+                    "$ref": "#/definitions/controllers.ErrorMessage"
+                  }
+                }
+              }
+            },
+          "post": {
+            "security": [
+              {
+                "JwtAuth": []
+              }
+            ],
+            "consumes": [
+              "application/json"
+            ],
+            "produces": [
+              "application/json"
+            ],
+            "tags": [
+              "todo"
+            ],
+            "summary": "Create todo",
+            "parameters": [
+              {
+                "description": "title of todo to create",
+                "name": "body",
+                "in": "body",
+                "required": true,
+                "schema": {
+                  "$ref": "#/definitions/controllers.NewTodoDto"
+                }
+              }
+            ],
+            "responses": {
+              "201": {
+                "description": "the list of todos that user have",
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/models.Todo"
+                  }
+                }
+              },
+              "401": {
+                "description": ""
+              },
+              "500": {
+                "description": "Internal Server Error",
+                "schema": {
+                  "$ref": "#/definitions/controllers.ErrorMessage"
+                }
+              }
+            }
+          }
+        },
+      "/api/todo/{todoId}": {
+        "delete": {
+          "security": [
+            {
+              "JwtAuth": []
+            }
+          ],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "todo"
+          ],
+          "summary": "Delete todo",
+          "parameters": [
+            {
+              "type": "integer",
+              "description": "id of todo to delete",
+              "name": "todoId",
+              "in": "path",
+              "required": true
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "the list of todos that user have",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/models.Todo"
+                }
+              }
+            },
+            "401": {
+              "description": ""
+            },
+            "404": {
+              "description": "Todo not found",
+              "schema": {
+                "$ref": "#/definitions/controllers.ErrorMessage"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/controllers.ErrorMessage"
+              }
+            }
+          }
+        },
+        "patch": {
+          "security": [
+            {
+              "JwtAuth": []
+            }
+          ],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "todo"
+          ],
+          "summary": "Finish todo",
+          "parameters": [
+            {
+              "type": "integer",
+              "description": "id of todo that finished",
+              "name": "todoId",
+              "in": "path",
+              "required": true
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "the list of todos that user have",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/models.Todo"
+                }
+              }
+            },
+            "401": {
+              "description": ""
+            },
+            "404": {
+              "description": "Todo not found",
+              "schema": {
+                "$ref": "#/definitions/controllers.ErrorMessage"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/controllers.ErrorMessage"
+              }
+            }
                 }
             }
         }
     },
     "definitions": {
-        "controllers.ErrorMessage": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "controllers.TokenResponseDto": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
+      "controllers.ErrorMessage": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "controllers.NewTodoDto": {
+        "type": "object",
+        "required": [
+          "title"
+        ],
+        "properties": {
+          "title": {
+            "type": "string"
+          }
+        }
+      },
+      "controllers.TokenResponseDto": {
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": "string"
+          }
+        }
         },
         "controllers.UserCredentialDto": {
             "type": "object",
